<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkgrdgame460"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.westga.cs6242.wordjumble.WordJumbleGameActivity"
    tools:showIn="@layout/activity_word_jumble_game">

    <LinearLayout
        android:id="@+id/llhSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/tvSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size"
            android:paddingTop="85dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textSize="22dp" />

        <EditText
            android:id="@+id/etSize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="5.59"
            android:inputType="number"
            android:textColor="#da8935"
            android:textSize="25dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvJumbled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/llhSize"
        android:paddingBottom="15dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/jumbled"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="35dp"
        android:textColor="#fefefe"
        android:typeface="serif" />

    <LinearLayout
        android:id="@+id/llhGuess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvJumbled"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:weightSum="1">


        <EditText
            android:id="@+id/etGuess"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="2.10"
            android:paddingTop="10dp"
            android:textSize="25sp"
            android:textColor="#d17d06"
            android:inputType="text"
            android:singleLine="false"
            android:lines="2"
            android:background="#ffffff"
            android:text="@string/yourGuess" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llvBtns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/llhGuess"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/llhBtns1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/btnGuess"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/softbtn"
                android:onClick="click_Guess"
                android:text="@string/guess"

                android:textColor="#ffffff"
                android:backgroundTint="#de8b36" />

            <Button
                android:id="@+id/btnChange"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/softbtn"
                android:onClick="click_Change"
                android:text="@string/change"
                android:textColor="#ffffff" />




            <Button
                android:id="@+id/btnQuit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/softbtn"
                android:onClick="click_Quit"
                android:text="@string/quit"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/btnNewWord"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/softbtn"
                android:onClick="click_NewWord"
                android:text="@string/new_word"
                android:textColor="#ffffff" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Hint"
        android:id="@+id/btnHint"
        android:layout_alignTop="@+id/llhSize"
        android:layout_toRightOf="@+id/llhSize"
        android:layout_toEndOf="@+id/llhSize"
        android:textColor="#ffffff"
        android:backgroundTint="#a4a5a5"
        android:textSize="12dp"
        android:onClick="click_Hint" />
</RelativeLayout>
